--- a/PROTOTYPES/1.md
+++ b/PROTOTYPES/1.md
@@ -39,8 +39,8 @@
 
 Для подготовки данных существует два метода:
 
-- `.build!(...)` — подготовка данных с вызовом исключения в случае несоответствия описанным в моделях свойствам;
-- `.build(...)` — подготовка данных с игнорированием несоответствий описанным в моделях свойствам.
+- `.build!(hash)` — подготовка данных с вызовом исключения в случае несоответствия описанным в моделях свойствам;
+- `.build(hash)` — подготовка данных с игнорированием несоответствий описанным в моделях свойствам.
 
 Примененный метод также применит указанный режим для всех вложенных моделей.
 
@@ -89,8 +89,8 @@ json = hash.to_json
 
 Для парса JSON существует два метода:
 
-- `.parse!(...)` — парс данных с вызовом исключения в случае несоответствия описанным в моделях свойствам;
-- `.parse(...)` — парс данных с игнорированием несоответствий описанным в моделях свойствам.
+- `.parse!(json)` — парс данных с вызовом исключения в случае несоответствия описанным в моделях свойствам;
+- `.parse(json)` — парс данных с игнорированием несоответствий описанным в моделях свойствам.
 
 ### Вызов
 
