--- a/PROTOTYPES/1.md
+++ b/PROTOTYPES/1.md
@@ -35,6 +35,29 @@
 }
 ```
 
+## Структура моделей
+
+### User
+
+```ruby
+class User < Datory::Model
+  attribute :id, type: Integer
+  attribute :first_name, from: :firstname, type: String
+  attribute :last_name, from: :lastname, type: String
+  attribute :email, type: String
+  attribute :birth_date, from: :birthDate, type: Date, required: false
+
+  # ...
+
+  attribute :login, type: Hash, prepare: ->(value:) { UserLogin.build!(value) }
+  attribute :address, type: Hash, prepare: ->(value:) { UserAddress.build!(value) }
+
+  # ...
+
+  attribute :company, type: Hash, prepare: ->(value:) { UserCompany.build!(value) }
+end
+```
+
 ## Подготовка данных для последующей конвертиции в JSON
 
 Для подготовки данных существует два метода:
@@ -44,7 +67,44 @@
 
 Примененный метод также применит указанный режим для всех вложенных моделей.
 
-### Вызов
+### Подготовка с автоматическим определением моделей
+
+```ruby
+hash = User.build!(
+  id: SecureRandom.uuid,
+  first_name: Faker::Name.first_name,
+  last_name: Faker::Name.last_name,
+  email: Faker::Internet.email,
+  birth_date: Faker::Date.birthday,
+  login: {
+    uuid: SecureRandom.uuid,
+    username: Faker::Internet.username,
+    password: Faker::Internet.password,
+    md5: Digest::MD5.hexdigest(SecureRandom.uuid),
+    sha1: Digest::SHA1.hexdigest(SecureRandom.uuid),
+    registered_at: 3.days.ago
+  },
+  address: {
+    street: Faker::Address.street_name,
+    suite: Faker::Address.secondary_address,
+    city: Faker::Address.city,
+    zip_code: Faker::Address.zip_code,
+    geo: {
+      latitude: Faker::Address.latitude,
+      longitude: Faker::Address.longitude
+    }
+  },
+  phone: Faker::PhoneNumber.cell_phone,
+  website: Faker::Internet.url,
+  company: {
+    name: Faker::Company.name,
+    catch_phrase: Faker::Company.catch_phrase,
+    bs: Faker::Company.bs
+  }
+)
+```
+
+### Подготовка с явным указанием моделей
 
 ```ruby
 hash = User.build!(
@@ -80,6 +140,8 @@ hash = User.build!(
   )
 )
 ```
+
+### Конвертация в JSON
 
 ```ruby
 json = hash.to_json
