--- a/PROTOTYPES/1.md
+++ b/PROTOTYPES/1.md
@@ -44,10 +44,10 @@
 ```ruby
 class User < Datory::Model
   attribute :id, type: Integer
-  attribute :first_name, from: :firstname, type: String
-  attribute :last_name, from: :lastname, type: String
+  attribute :first_name, as: :firstname, type: String
+  attribute :last_name, as: :lastname, type: String
   attribute :email, type: String
-  attribute :birth_date, from: :birthDate, type: Date, required: false
+  attribute :birth_date, as: :birthDate, type: Date, required: false
 
   # ...
 
