--- a/PROTOTYPES/1.md
+++ b/PROTOTYPES/1.md
@@ -17,16 +17,18 @@
     "sha1": "35544a31cc19bd6520af116554873167117f4d94",
     "registered": "2023-01-10T10:03:20.022Z"
   },
-  "address": {
-    "street": "123 Main Street",
-    "suite": "Apt. 4",
-    "city": "Anytown",
-    "zipcode": "12345-6789",
-    "geo": {
-      "lat": "42.1234",
-      "lng": "-71.2345"
+  "addresses": [
+    {
+      "street": "123 Main Street",
+      "suite": "Apt. 4",
+      "city": "Anytown",
+      "zipcode": "12345-6789",
+      "geo": {
+        "lat": "42.1234",
+        "lng": "-71.2345"
+      }
     }
-  },
+  ],
   "phone": "(555) 555-1234",
   "website": "www.johndoe.com",
   "company": {
@@ -52,7 +54,7 @@ class User < Datory::Model
   # ...
 
   attribute :login, type: Hash, prepare: ->(value:) { UserLogin.build!(value) }
-  attribute :address, type: Hash, prepare: ->(value:) { UserAddress.build!(value) }
+  attribute :address, type: Array, consists_of: Hash, prepare: ->(value:) { value.map { |i| UserAddress.build!(i) } }
 
   # ...
 
