--- a/PROTOTYPES/1.md
+++ b/PROTOTYPES/1.md
@@ -53,28 +53,21 @@ class User < Datory::Model
 
   # ...
 
-  attribute :login, type: Hash, prepare: ->(value:) { UserLogin.build!(value) }
-  attribute :address, type: Array, consists_of: Hash, prepare: ->(value:) { value.map { |i| UserAddress.build!(i) } }
+  attribute :login, type: Hash, prepare: ->(value:) { UserLogin.build(value) }
+  attribute :address, type: Array, consists_of: Hash, prepare: ->(value:) { value.map { |i| UserAddress.build(i) } }
 
   # ...
 
-  attribute :company, type: Hash, prepare: ->(value:) { UserCompany.build!(value) }
+  attribute :company, type: Hash, prepare: ->(value:) { UserCompany.build(value) }
 end
 ```
 
 ## Подготовка данных для последующей конвертиции в JSON
 
-Для подготовки данных существует два метода:
-
-- `.build!(hash)` — подготовка данных с вызовом исключения в случае несоответствия описанным в моделях свойствам;
-- `.build(hash)` — подготовка данных с игнорированием несоответствий описанным в моделях свойствам.
-
-Примененный метод также применит указанный режим для всех вложенных моделей.
-
 ### Подготовка с автоматическим определением моделей
 
 ```ruby
-hash = User.build!(
+hash = User.build(
   id: SecureRandom.uuid,
   first_name: Faker::Name.first_name,
   last_name: Faker::Name.last_name,
@@ -111,13 +104,13 @@ hash = User.build!(
 ### Подготовка с явным указанием моделей
 
 ```ruby
-hash = User.build!(
+hash = User.build(
   id: SecureRandom.uuid,
   first_name: Faker::Name.first_name,
   last_name: Faker::Name.last_name,
   email: Faker::Internet.email,
   birth_date: Faker::Date.birthday,
-  login: UserLogin.build!(
+  login: UserLogin.build(
     uuid: SecureRandom.uuid,
     username: Faker::Internet.username,
     password: Faker::Internet.password,
@@ -125,19 +118,19 @@ hash = User.build!(
     sha1: Digest::SHA1.hexdigest(SecureRandom.uuid),
     registered_at: 3.days.ago
   ),
-  address: UserAddress.build!(
+  address: UserAddress.build(
     street: Faker::Address.street_name,
     suite: Faker::Address.secondary_address,
     city: Faker::Address.city,
     zip_code: Faker::Address.zip_code,
-    geo: UserAddressGeo.build!(
+    geo: UserAddressGeo.build(
       latitude: Faker::Address.latitude,
       longitude: Faker::Address.longitude
     )
   ),
   phone: Faker::PhoneNumber.cell_phone,
   website: Faker::Internet.url,
-  company: UserCompany.build!(
+  company: UserCompany.build(
     name: Faker::Company.name,
     catch_phrase: Faker::Company.catch_phrase,
     bs: Faker::Company.bs
